--- a/styles/style.css
+++ b/styles/style.css
@@ -189,7 +189,7 @@ html, body {
     color: #FFFFFF;
     text-transform: uppercase;
     margin-top: 61px;
-    margin-left: 4px;
+    margin-left: 3px;
     padding-bottom: 15px;
     text-align: center;
     z-index: 1;
@@ -198,7 +198,7 @@ html, body {
 .ourpluses {
     color: #fff;
     margin-top: 10px;
-    margin-left: 2px;
+    margin-left: 3px;
     font-size: 16px;
     font-family: 'BarlowRegular';
     margin-bottom: 0px;
@@ -213,16 +213,56 @@ html, body {
 }
 
 .second_staff_block {
-    padding-top: 114px;
+    padding-top: 77px;
     padding-left: 69px;
+    padding-right: 81px;
 
 }
 
-.staff_ico {
-    width: 65px;
-    height: 65px;
-    margin-left: 103px;
+.hoverguarant {
+    width: 264px;
+    height: 250px;
+    padding-top: 40px;
+}
+
+.hoverguarant:hover {
+    width: 264px;
+    height: 250px;
+    background-color: #282828;
+    transition: 0.5s;
+    padding-top: 40px;
+}
+
+.present_blocks {
+    align-self: center;
+}
+
+.img_block {
+    width: 60px;
+    height: 60px;
+    margin-left: 109px;
     margin-bottom: 30px;
+    border: 1px solid transparent;
+    border-image: linear-gradient(145deg, rgb(93, 95, 239) 15%, rgb(40, 40, 40) 49%, rgb(93, 95, 239) 100%);
+    border-image-slice: 1;
+    -moz-border-image: -moz-linear-gradient(145deg, rgb(93, 95, 239) 15%, rgb(40, 40, 40) 49%, rgb(93, 95, 239) 100%);
+}
+
+
+.staff_ico {
+    width: 34px;
+    height: 34px;
+    margin-top: 13px;
+    margin-left: 11px;
+    
+}
+
+.delivery_ico {
+    width: 37px;
+    height: 25px;
+    margin-top: 17px;
+    margin-left: 11px;
+
 }
 
 .title_of_midblock {
