--- a/styles/style.css
+++ b/styles/style.css
@@ -182,6 +182,12 @@ html, body {
     font-family: 'BarlowRegular';
     margin-left: 4px;
 }
+
+.readmore:hover {
+    font-size: 18px;
+    transition: 1s;
+    color: #fff;
+}
  
 .whywe {
     font-size: 31px;
@@ -216,6 +222,17 @@ html, body {
     padding-top: 77px;
     padding-left: 69px;
     padding-right: 81px;
+
+}
+
+.second_staff_block h5 {
+    padding-left: 12px;
+
+}
+
+.second_staff_block p {
+    padding-top: 5px;
+    padding-left: 28px;
 
 }
 
@@ -269,10 +286,19 @@ html, body {
     color: #fff;
     text-transform: uppercase;
     text-align: center;
+    font-family: 'BarlowMedium';
+    font-size: 22px;
 
 }
 
 .text_of_midblock {
     color: #fff;
     text-align: center;
+    font-family: 'BarlowRegular';
+    font-size: 16px;
+}
+
+.second_staff_block:nth-child(3) {
+    padding-top: 50px;
+    margin-left: -6px;
 }
