--- a/styles/style.css
+++ b/styles/style.css
@@ -168,6 +168,7 @@ html, body {
 .second_about {
     margin-top: 28px;
 }
+
 .third_about {
     margin-top: 21px;
     padding-bottom: 82px;
@@ -300,5 +301,41 @@ html, body {
 
 .second_staff_block:nth-child(3) {
     padding-top: 50px;
-    margin-left: -6px;
+    margin-left: -12px;
+}
+
+.second_staff_block:nth-child(3) h5 {
+    margin-left: 4px;
+}
+
+.service_block {
+    margin-top: 211px;
+}
+
+.textservice {
+    margin-left: 70px;
+    padding-top: 15px;
+}
+
+.our_pluses {
+    padding-top: 23px;
+    padding-bottom: 43px;
+    margin-left: -26px;
+}
+
+.our_pluses li {
+    padding-top: 18px;
+    font-family: 'BarlowSemiBold';
+    font-size: 20px;
+    color: #fff;
+    list-style: none;
+}
+
+.bikeservice {
+    padding-right: 10px;
+    margin-left: -15px;
+}
+
+.fa-check-square {
+    margin-right:10px;
 }
