Added Solution block

--- a/styles/style.css
+++ b/styles/style.css
@@ -339,3 +339,24 @@ html, body {
 .fa-check-square {
     margin-right:10px;
 }
+
+.solutions_block {
+    padding-top: 242px;
+}
+
+.videobike {
+    margin-left: 91px;
+}
+
+.bottom_spacing {
+    padding-bottom: 84px;
+}
+
+.textsolution {
+    margin-top: -30px;
+    margin-left: 62px;
+}
+
+.solution_button {
+    margin-left: 66px;
+}
